# tiny-cnn

./: CMakeLists.txt  README.md
cmake/: FindTBB.cmake
include/: activation_function.h  config.h  network.h
